[package]
name = "stcmint-fight"
version = "0.1.0"
authors = ["fikgol <hit.cs.lijun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starcoin-storage = { git = "https://github.com/starcoinorg/starcoin", package = "starcoin-storage" }
anyhow = "1.0.35"
hex = "0.4.2"
