[package]
name = "stcmint-fight"
version = "0.1.0"
authors = ["fikgol <hit.cs.lijun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starcoin-config = { git = "https://github.com/starcoinorg/starcoin",package = "starcoin-config"}
starcoin-chain = { git = "https://github.com/starcoinorg/starcoin",package = "starcoin-chain"}
starcoin-chain-api = { git = "https://github.com/starcoinorg/starcoin",package ="starcoin-chain-api"}
starcoin-vm-types = { git = "https://github.com/starcoinorg/starcoin",package = "starcoin-vm-types"}
starcoin-storage = { git = "https://github.com/starcoinorg/starcoin",package = "starcoin-storage"}
anyhow = "1.0.35"
hex = "0.4.2"
